# CODING

./: .gitignore  CLionProjects.lnk  Fah.py  PycharmProjects.lnk
HS Programming/C++/: CMakeLists.txt
HS Programming/C++/CS/CS/: CS.vcxproj
HS Programming/C++/CS/Debug/: CS.ilk
HS Programming/C++/Display 1.8/: Display 1.8.sln
HS Programming/C++/Display 2.1/: Display 2.1.sln
HS Programming/C++/Display 2.1/Display 2.1/: Display 2.1.cpp  Display 2.1.vcxproj.filters
HS Programming/C++/Display 2.11/: Display 2.11.sln
HS Programming/C++/Display 2.11/Display 2.11/: Display 2.11.cpp  Display 2.11.vcxproj  Display 2.11.vcxproj.filters
HS Programming/C++/Display 2.14/Display 2.14/: Display 2.14.cpp  Display 2.14.vcxproj.filters
HS Programming/C++/Display 2.15/: Display 2.15.sln
HS Programming/C++/Display 2.15/Debug/: Display 2.15.ilk
HS Programming/C++/Display 2.15/Display 2.15/: Display 2.15.cpp
HS Programming/C++/Display 2.16/: Display 2.16.sln
HS Programming/C++/Display 2.3/Display 2.3/: Display 2.3.vcxproj  Display 2.3.vcxproj.filters
HS Programming/C++/Display 2.4/Display 2.4/: Display 2.4.cpp  Display 2.4.vcxproj
HS Programming/C++/Display 2.7/Display 2.7/: Display 2.7.cpp
HS Programming/C++/Display 3.4/: Display 3.4.sln
HS Programming/C++/Display 3.4/Display 3.4/: Display 3.4.vcxproj
HS Programming/C++/Display 3.5/: Display 3.5.sln
HS Programming/C++/Display 3.5/Display 3.5/: Display 3.5.cpp  Display 3.5.vcxproj.filters
HS Programming/C++/Display 3.6/: Display 3.6.sln
HS Programming/C++/Display 3.6/Display 3.6/: Display 3.6.vcxproj
HS Programming/C++/Display 5.9/: Display 5.9.sln
HS Programming/C++/Display 5.9/Debug/: Display 5.9.ilk
HS Programming/C++/Programming Q2 (Fah)/: Display 2.1.docx  Display 2.16.docx  Display 2.2.docx  Display 2.7.docx  Display 3.14.docx  Display 3.4.docx  Display 3.8.docx  Display 4.1.docx  Display 4.12.docx  Display 4.13.docx  Display 4.18.docx  Display 4.3.docx  Display 5.10.docx  Display 5.11.docx  Display 6.1.docx  Display 6.8.docx
Year 1/C/Workshop Sessions/Week 15-2/: CMakeLists.txt  (+2 more)
(+1227 files in other folders)
