cmake_minimum_required(VERSION 3.19)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
        CS/CS/CS.cpp
        "Display 1.8/Display 1.8/Display 1.8.cpp"
        "Display 2.1/Display 2.1/Display 2.1.cpp"
        "Display 2.11/Display 2.11/Display 2.11.cpp"
        "Display 2.14/Display 2.14/Display 2.14.cpp"
        "Display 2.15/Display 2.15/Display 2.15.cpp"
        "Display 2.16/Display 2.16/Display 2.16.cpp"
        "Display 2.3/Display 2.3/Display 2.3.cpp"
        "Display 2.4/Display 2.4/Display 2.4.cpp"
        "Display 2.7/Display 2.7/Display 2.7.cpp"
        "Display 3.4/Display 3.4/Display 3.4.cpp"
        "Display 3.5/Display 3.5/Display 3.5.cpp"
        "Display 3.6/Display 3.6/Display 3.6.cpp"
        "Display 5.9/Display 5.9/Display 5.9.cpp")
